# ferrum

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  mise.toml  pyproject.toml  rust-toolchain.toml
.claude/agents/: README.md  chief-architect.md  code-reviewer.md  product-designer.md  product-manager.md  python-orm-engineer.md  rust-core-engineer.md  security-engineer.md  test-engineer.md
.claude/commands/: benchmark.md  design-feature.md  write-tests.md
.claude/docs/: ARCHITECTURE.md  DATA_MODELING.md  MIGRATIONS.md  PRODUCT_DESIGN.md  PRODUCT_REQUIREMENTS.md  PROJECT_STRUCTURE.md  QUERY_ENGINE.md  SECURITY.md
.claude/plans/: DATA_MODELING.md  DECISIONS.md  PRD.md  README.md  migration-gate-followups.md
.claude/rules/: async.md  project.md  pyo3.md  rust.md
.claude/skills/: documentation-engineering.md  migration-engine-design.md  pyo3-extension-development.md
.cursor/agents/: README.md  chief-architect.md  code-reviewer.md  product-designer.md  product-manager.md  python-orm-engineer.md  rust-core-engineer.md  security-engineer.md  test-engineer.md
.cursor/commands/: architecture-impact.md  design-feature.md  implement-feature.md  review-code.md  safe-refactor.md  update-docs.md
.cursor/plans/: ARCH.plan.md  MIGRATIONS.plan.md  PROJECT_STRUCTURE.plan.md  QUERY_ENGINE.plan.md  README.md  adr-002-ir-contract.plan.md  wave-0-architect-verdict.md  wave-0-backlog.md  wave-1-dx-review.plan.md  wave-1-gate-architect.md  wave-1-gate-security.md  wave-2-gate-reviewer.md  wave-2-gate-security.md  wave-3-gate-reviewer.md  wave-5-ci-local.md  wave-5-pm-acceptance.md  wave-5-release-qual.md
.cursor/rules/: architecture.md  python.md  testing.md
.cursor/skills/: orm-query-design.md  performance-profiling.md  python-package-engineering.md  rust-core-engineering.md
.github/workflows/: ci.yml  nightly.yml  release.yml
benches/: README.md  budgets.json  check_thresholds.py  test_check_thresholds.py
crates/ferrum-core/: Cargo.toml
crates/ferrum-core/benches/: hydrate.rs
crates/ferrum-core/src/: error.rs  lib.rs
crates/ferrum-core/src/compile/: mod.rs
crates/ferrum-core/src/hydrate/: mod.rs
crates/ferrum-core/src/ir/: metadata.rs  mod.rs
crates/ferrum-core/src/migrate/: mod.rs
crates/ferrum-migrate/: Cargo.toml
crates/ferrum-migrate/src/: lib.rs
crates/ferrum-pyo3/: Cargo.toml
crates/ferrum-pyo3/src/: lib.rs
crates/ferrum-sql/: Cargo.toml
crates/ferrum-sql/benches/: compile.rs
crates/ferrum-sql/src/: dialect.rs  emit.rs  lib.rs
crates/ferrum-sql/src/fts/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
docs/: README.md  api-reference.md  architecture.md  docstring-coverage.md  getting-started.md
docs/foundation/: ARCHITECTURE.md  PRODUCT_REQUIREMENTS.md  PROJECT_STRUCTURE.md  QUERY_ENGINE.md
examples/: README.md
examples/fastapi_quickstart/: .env.example  README.md  app.py
examples/migrations/: .env.example  README.md  generate_plan.py  models.py
examples/migrations/sample_plans/: 002_add_note_title.json  003_drop_note_title.json
examples/mysql/: .env.example  README.md  docker-compose.yml  main.py
examples/mysql/plans/: 001_create_note.json
examples/pyproject_config/: .env.example  README.md  ferrum_conf.py  main.py  models.py  pyproject.toml
examples/simple/: .env.example  README.md  docker-compose.yml  main.py
examples/sqlite/: .env.example  README.md  main.py
examples/ticket_analyzer_compat/: README.md  models.py
examples/ticket_analyzer_compat/migrations/: 0001_ticket_analyzer_compat.py
python/ferrum/: __init__.py  _native.pyi  config.py  connection.py  errors.py  expressions.py  hooks.py  models.py  observability.py  queryset.py  registry.py  relations.py  runtime.py  session.py
python/ferrum/cli/: __init__.py  app.py  bootstrap.py  init.py  inspectdb_cmd.py  makemigrations_cmd.py  migrate_cmd.py  migrations_cmd.py  resetdb_cmd.py  revert_cmd.py  showmigrations_cmd.py  sqlmigrate_cmd.py
python/ferrum/contrib/: __init__.py  fastapi.py
python/ferrum/drivers/: __init__.py  mssql.py  mysql.py  postgres.py  protocol.py  sqlite.py
python/ferrum/ext/: __init__.py  fts.py  pgvector.py
python/ferrum/migrations/: __init__.py  base.py  drift.py  gates.py  introspect.py  ledger.py  loader.py  operations.py  orchestrator.py  tokens.py
tests/python/benchmark/: conftest.py  test_benchmark_concurrency.py  test_benchmark_crud.py  test_benchmark_hooks.py
tests/python/integration/: conftest.py  helpers.py  test_bulk.py  test_concurrency.py  test_connection.py  test_connection_runtime.py  test_constraints.py  test_crud.py  test_drift.py  test_fts_mssql.py  test_fts_mysql.py  test_fts_postgres.py  test_fts_sqlite.py  test_hooks_integration.py  test_migrations_integration.py  test_placeholder.py  test_query_expressions.py  test_read_path.py  test_relationship_loading.py  test_terminals.py  test_ticket_analyzer_compat.py  test_transactions.py
tests/python/property/: test_placeholder.py
tests/python/security/: test_credential_safety.py  test_fts_compile.py  test_init_safety.py  test_migration_safety.py  test_sql_safety.py
tests/python/smoke/: test_wheel_smoke.py
tests/python/unit/: test_bootstrap.py  test_boundary.py  test_bulk.py  test_cli.py  test_composite_pk.py  test_config.py  test_contrib_fastapi.py  test_errors.py  test_field_types.py  test_fts_migrations.py  test_fts_mssql.py  test_fts_mysql.py  test_fts_postgres.py  test_fts_sqlite.py  test_hooks.py  test_indexes.py  test_init_scaffold.py  test_inspectdb.py  test_ir_roundtrip.py  test_ledger.py  test_migration_gates.py  test_migration_loader.py  test_migration_operations.py  test_migrations.py  test_migrations_cli.py  test_model_metadata.py  test_mssql.py  test_new_operations.py  test_observability.py  test_pg_types.py  test_pgvector_score.py  test_query_expressions.py  test_queryset_guards.py  test_queryset_ir.py  test_queryset_terminals.py  test_relationship_loading.py  test_relationships.py  test_resetdb.py  (+10 more)
tests/rust/: integration_placeholder.rs
(+5 files in other folders)
