[workspace]
members = [
    "crates/ferrum-core",
    "crates/ferrum-sql",
    "crates/ferrum-pyo3",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ferrum Contributors"]
license = "Apache-2.0"
repository = "https://github.com/ferrumdb/ferrum"
rust-version = "1.85"

[workspace.dependencies]
# PyO3 — only ferrum-pyo3 depends on this; declared here to pin the version
pyo3 = { version = "0.22", features = ["abi3-py311"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Testing & property-based
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
