[workspace]
members = [
    "crates/ferrum-core",
    "crates/ferrum-sql",
    "crates/ferrum-pyo3",
    "crates/ferrum-migrate",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
authors = ["Ferrum Contributors"]
license = "Apache-2.0"
repository = "https://github.com/ferrumdb/ferrum"
rust-version = "1.85"

[workspace.dependencies]
# PyO3 — only ferrum-pyo3 depends on this; declared here to pin the version
pyo3 = { version = "0.29", features = ["abi3-py311"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# MessagePack wire format for the PyO3 boundary (always compiled; the Python
# `[msgpack]` extra gates only the runtime `msgpack` package + selection).
rmp-serde = "1"

# Error handling
thiserror = "2"

# Testing & property-based
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# `panic = "unwind"` is required for `ferrum-pyo3` (`cdylib`) so that
# `std::panic::catch_unwind` can intercept Rust panics and convert them to
# catchable Python exceptions rather than aborting the interpreter process.
# This is the default but we set it explicitly (ARCHITECTURE.md §6.2, ERR-2).
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
