[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ferrum"
version = "0.1.0"
description = "Next-generation async ORM for Python with a Rust-powered core"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["orm", "async", "postgresql", "pydantic", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13",
]
fastapi = []  # uses the host's FastAPI; no extra deps needed
dev = [
    "ferrum[cli]",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "pytest-benchmark>=4",
    "mypy>=1.10",
    "ruff>=0.4",
    "import-linter>=2",
    "testcontainers[postgres]>=4",
    "pip-audit>=2",
]

[project.scripts]
ferrum = "ferrum.cli:main"

[project.urls]
Homepage = "https://github.com/ferrumdb/ferrum"
Repository = "https://github.com/ferrumdb/ferrum"
Documentation = "https://ferrumdb.github.io/ferrum"
"Bug Tracker" = "https://github.com/ferrumdb/ferrum/issues"

# ---------------------------------------------------------------------------
# maturin
# ---------------------------------------------------------------------------
[tool.maturin]
# Python source package is in python/; the built extension is injected as ferrum._native
python-source = "python"
module-name = "ferrum._native"
# abi3 wheel targeting CPython 3.11+ (ADR-005)
features = ["pyo3/abi3-py311"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["python", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # bandit (security)
    "N",    # pep8-naming
    "ANN",  # flake8-annotations
    "RUF",  # Ruff-specific
]
ignore = [
    "ANN101",  # missing self annotation
    "ANN102",  # missing cls annotation
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]  # asserts and missing annotations are fine in tests

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
mypy_path = "python"

[[tool.mypy.overrides]]
module = ["asyncpg.*", "testcontainers.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: requires a live PostgreSQL instance",
    "security: security qualification gate (required for release)",
    "smoke: post-install smoke check",
    "property: property-based tests (hypothesis)",
    "benchmark: performance benchmarks (not a blocking gate)",
]
# Do not run integration/security by default locally; require explicit -m flag.
addopts = "-m 'not integration and not security'"

# ---------------------------------------------------------------------------
# import-linter
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["ferrum"]
include_external_packages = true
contracts_file = ".importlinter"
