[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ferrum-orm"
version = "0.1.2"
description = "Next-generation async ORM for Python with a Rust-powered core"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["orm", "async", "postgresql", "mysql", "sqlite", "mssql", "pydantic", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
pg = ["asyncpg>=0.29"]
mysql = ["asyncmy>=0.2"]
sqlite = ["aiosqlite>=0.19"]
mssql = ["aioodbc>=0.5"]
msgpack = ["msgpack>=1.0"]
cli = [
    "typer>=0.12",
    "rich>=13",
]
dotenv = ["python-dotenv>=1.0"]
uuid7 = ["uuid6>=2024.1"]
fastapi = []  # uses the host's FastAPI; no extra deps needed
otel = ["opentelemetry-api>=1.20"]
all = [
    "ferrum-orm[pg]",
    "ferrum-orm[mysql]",
    "ferrum-orm[sqlite]",
    "ferrum-orm[mssql]",
    "ferrum-orm[msgpack]",
    "ferrum-orm[cli]",
    "ferrum-orm[dotenv]",
]
dev = [
    "ferrum-orm[pg,cli,dotenv]",
    "maturin>=1.7,<2",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "pytest-benchmark>=4",
    "ruff>=0.4",
    "ty>=0.0.49",
    "import-linter>=2",
    "testcontainers[postgres]>=4",
    "pip-audit>=2",
]

[project.scripts]
ferrum = "ferrum.cli:main"

[project.urls]
Homepage = "https://github.com/ferrumdb/ferrum"
Repository = "https://github.com/ferrumdb/ferrum"
Documentation = "https://ferrumdb.github.io/ferrum"
"Bug Tracker" = "https://github.com/ferrumdb/ferrum/issues"

# ---------------------------------------------------------------------------
# maturin
# ---------------------------------------------------------------------------
[tool.maturin]
# Python source package is in python/; the built extension is injected as ferrum._native
python-source = "python"
module-name = "ferrum._native"
manifest-path = "crates/ferrum-pyo3/Cargo.toml"
# abi3 wheel targeting CPython 3.11+ (ADR-005).
# extension-module: build a Python extension that resolves CPython symbols at
# runtime instead of linking libpython at build time (no libpython3.x on the
# manylinux/cibuildwheel host or the setup-python lib path).
features = ["pyo3/abi3-py311", "pyo3/extension-module"]
# Pack LICENSE into the sdist too: maturin records `License-File: LICENSE` in the
# metadata, and PyPI (metadata 2.4) rejects the sdist if the file isn't present.
include = ["LICENSE"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["python", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # bandit (security)
    "N",    # pep8-naming
    "ANN",  # flake8-annotations
    "RUF",  # Ruff-specific
]
ignore = [
    "ANN101",  # missing self annotation
    "ANN102",  # missing cls annotation
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "N806"]  # asserts and missing annotations are fine in tests
"python/ferrum/cli/app.py" = ["B008"]  # Typer Option/Argument in parameter defaults
"python/ferrum/drivers/**" = ["ANN401", "SIM117", "S608"]  # driver boundary; table names from compiler allowlists
"python/ferrum/migrations/ledger.py" = ["S608"]  # LEDGER_TABLE is a fixed constant identifier
"python/ferrum/cli/resetdb_cmd.py" = ["S608"]  # LEDGER_TABLE is a fixed constant
"python/ferrum/ext/pgvector.py" = ["S608"]
"python/ferrum/relations.py" = ["S608"]
"python/ferrum/queryset.py" = ["S608"]  # identifiers from metadata allowlists; values are bound params

# ---------------------------------------------------------------------------
# ty
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.11"
extra-paths = ["python"]

[tool.ty.src]
include = ["python/ferrum"]

[tool.ty.analysis]
allowed-unresolved-imports = ["asyncpg.**", "asyncmy.**", "aiosqlite.**", "aioodbc.**", "pyodbc.**", "msgpack.**", "testcontainers.**", "opentelemetry.**"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: requires a live PostgreSQL instance",
    "security: security qualification gate (required for release)",
    "smoke: post-install smoke check",
    "property: property-based tests (hypothesis)",
    "benchmark: performance benchmarks (not a blocking gate)",
]
# Do not run integration/security by default locally; require explicit -m flag.
addopts = "-m 'not integration and not security'"

# ---------------------------------------------------------------------------
# import-linter
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["ferrum"]
include_external_packages = true
contracts_file = ".importlinter"
