[package]
name = "ferrum-core"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ferrum ORM core: IR validation, SQL compilation, row hydration, migration planning"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "hydrate"
harness = false

[lints.rust]
# ferrum-core is pure; unsafe is forbidden
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
