[package]
name = "ferrum-pyo3"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ferrum ORM: thin PyO3 extension bridge"

# cdylib = Python extension (.so / .pyd)
[lib]
name = "ferrum_native"
crate-type = ["cdylib"]

[dependencies]
ferrum-core = { path = "../ferrum-core" }
ferrum-sql = { path = "../ferrum-sql" }
pyo3 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints.clippy]
all = "warn"
pedantic = "warn"

# ferrum-pyo3 is the ONLY crate allowed to use unsafe (required by PyO3 internals).
# All unsafe blocks must have a documented audit comment.
[lints.rust]
# unsafe_code = "allow"  — intentionally not forbidden here; PyO3 requires it.
