[package]
name = "ferrum-sql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ferrum ORM: PostgreSQL-dialect SQL emission from validated IR/AST"

[dependencies]
ferrum-core = { path = "../ferrum-core" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
