[project]
name = "ferrum-pyproject-config-example"
version = "0.0.0"
description = "Ferrum example: [ferrum] settings colocated in pyproject.toml"
requires-python = ">=3.11"

# Ferrum reads this table when ferrum.toml is absent in the project root.
# Secrets (database URL) stay in .env — never commit real credentials here.
[ferrum]
settings = "ferrum_conf"
migrations_dir = "plans"
env_file = ".env"
# Use DATABASE_URL instead of the default FERRUM_DATABASE_URL → DATABASE_URL chain.
database_url_env = "DATABASE_URL"
